updated documentation url to view doc
